objects/Gameset__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Is the gameset/software in use?</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Common_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Common Name</label>
        <referenceTo>Common_Name__c</referenceTo>
        <relationshipLabel>Gamesets</relationshipLabel>
        <relationshipName>Gamesets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Software__c</fullName>
        <label>Manufacturer (Software)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Manufacturer_Software</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Software_Name_Check__c</fullName>
        <description>this field is automatically updated via a flow to ensure that the &quot;Gameset Name&quot; field (&quot;Name&quot; standard field) only accepts unique values</description>
        <externalId>true</externalId>
        <label>Unique Software Name Check</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Gameset</label>
    <listViews>
        <fullName>Active_Gamesets</fullName>
        <columns>NAME</columns>
        <columns>Common_Name__c</columns>
        <columns>Manufacturer_Software__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Gamesets</label>
    </listViews>
    <listViews>
        <fullName>All_Gamesets</fullName>
        <columns>NAME</columns>
        <columns>Common_Name__c</columns>
        <columns>Manufacturer_Software__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Gamesets</label>
    </listViews>
    <listViews>
        <fullName>Inactive_Gamesets</fullName>
        <columns>NAME</columns>
        <columns>Common_Name__c</columns>
        <columns>Manufacturer_Software__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Gamesets</label>
    </listViews>
    <nameField>
        <label>Gameset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gamesets</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>